# ubcore

./: CMakeLists.txt  CMakePresets.json
test/test_fcl/: CMakeLists.txt  test_fcl_ubcore.sh
ubcore/: CMakeLists.txt
ubcore/BurstNoiseMetrics/: BurstNoiseMetrics.fcl  BurstNoiseMetricsFilter_module.cc  BurstNoiseMetrics_module.cc  CMakeLists.txt  run_BurstNoiseMetricsFilter.fcl
ubcore/DLFilters/: CMakeLists.txt  DLSignalSample_module.cc
ubcore/DQMTools/: CMakeLists.txt  DQMChannelNoiseModule_module.cc  DQMFlashModule_module.cc  DQMHitAlg.cxx  DQMHitAlg.h  DQMHitModule_module.cc  DQMTPCBurstModule_module.cc  DQMTrackModule_module.cc  GoodRunSelectionAna_module.cc  HVBurstFilter_module.cc
ubcore/DummySource/: CMakeLists.txt  DummySource_source.cc
ubcore/EventGenerator/: CMakeLists.txt  MultiPartVertex_module.cc
ubcore/EventGenerator/GENIE/: genie_microboone.fcl  genie_microboone_default+MEC.fcl
ubcore/EventGenerator/HNL/: CMakeLists.txt  CalcBranchingRatios_module.cc  EvtTimeFNALBeam.cxx  FluxReader.cxx  FluxReader.h  FluxReaderBNB.cxx  FluxReaderBNB.h  FluxReaderNuMI.cxx  FluxReaderNuMI.h  GenKinematics.cxx  GenKinematics.h  HNLGenFromBNBFlux_module.cc  HNLGenFromNuMIFlux_module.cc
ubcore/EventGenerator/HNL/job/: hnl_gen_bnb.fcl  hnl_gen_numi.fcl
ubcore/EventGenerator/HeavyNeutralLeptonGen/: GenKinematics.cxx  HeavyNeutralLeptonGenFromBNBFlux_module.cc  HeavyNeutralLeptonGenFromNuMIFlux_module.cc
ubcore/EventGenerator/HeavySterileNeutrino/: CMakeLists.txt  HSNGen_module.cc
ubcore/EventGenerator/HeavySterileNeutrino/DataObjects/: CMakeLists.txt
ubcore/EventGenerator/HeavySterileNeutrino/Helpers/: CMakeLists.txt
ubcore/EventGenerator/HepMC/: CMakeLists.txt  HepMCFileGenWithPileup_module.cc  HepMCFileGen_module.cc  hepmcfilegen.fcl  prodhepmc_overlay_uboone.fcl  prodhepmc_uboone.fcl
ubcore/EventGenerator/HepMC/job/: hepmcfilegen.fcl  prodhepmc_overlay_uboone.fcl  prodhepmc_uboone.fcl  prodhepmc_uboone_wpileup.fcl
ubcore/EventGenerator/HepMC/scripts/: nuwro_script.sh
ubcore/EventGenerator/HepMC/xml/: convert_hepmc.xml  convert_hepmc_overlay.xml  convert_hepmc_overlay_TEST.xml
ubcore/EventGenerator/HiggsPortalGen/: CMakeLists.txt  HiggsPortalGen_module.cc  prodhp.fcl
ubcore/EventGenerator/HiggsPortalScalarGen/: CMakeLists.txt  EvtTimeFNALBeam.h  FluxReader.cxx  HiggsPortalScalarGenFromBNBFlux_module.cc  HiggsPortalScalarGenFromNuMIFlux_module.cc
ubcore/EventGenerator/TwoBodyDecayGen/: CMakeLists.txt  TwoBodyDecayGen_module.cc
ubcore/Geometry/: CMakeLists.txt  ChannelMapUBooNEAlg.cxx  ChannelMapUBooNEAlg.h  UBOpReadoutMap.cc  UBOpReadoutMap.h  UBOpReadoutMap_service.cc  UBooNEGeometryHelper.cc  UBooNEGeometryHelper.h  UBooNEGeometryHelper_service.cc  UBooNEWireReadout.cc  UBooNEWireReadout.h  UBooNEWireReadout_service.cc  WireReadoutUBooNEGeom.cxx  WireReadoutUBooNEGeom.h  geometry_microboone.fcl  microboone_opdetmap.fcl
ubcore/Geometry/gdml/: microboonev12.gdml  microboonev12_nowires.gdml
ubcore/HyperonProduction/: CMakeLists.txt
ubcore/HyperonProduction/Alg/: FV.h
ubcore/HyperonProduction/Modules/: CMakeLists.txt  HyperonGoodRecoFilter_module.cc  HyperonSignalTruthFilter_module.cc  HyperonSignal_module.cc
ubcore/HyperonProduction/job/: HyperonConfig.fcl  run_HyperonFilter.fcl  run_HyperonGoodRecoFilter.fcl  run_HyperonTruthFilter.fcl
ubcore/HyperonProduction/scripts/: run_goodreco_filter.sh
ubcore/LLBasicTool/GeoAlgo/: CMakeLists.txt  GeoAlgo.cxx  GeoObjCollection.cxx
ubcore/PMTDoubleReadoutFilter/: CMakeLists.txt  OpDetWaveformDumper_module.cc  PMTCosmicFilter_module.cc  PMTDoubleReadoutFilter_module.cc  microboone_pmtcosmicfilter.fcl  microboone_pmtdoublereadoutfilter.fcl  microboone_waveformdumper.fcl
ubcore/QuietEventFilter/: CMakeLists.txt  QuietEventAna_module.cc  QuietEventFilter_module.cc
ubcore/SampledInput/: CMakeLists.txt  SampledInputInfo_module.cc
ubcore/TriggerSim/: CMakeLists.txt  TriggerTiming_module.cc  UBTriggerAlgo.cxx  UBTriggerAlgo.h  UBTriggerSim_module.cc  triggersim_microboone.fcl
ups/: product_deps
